tests/snapshots/no_step_narration/numeric_dot_step.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/no_step_narration/numeric_dot_step.input.py
---
no-step-narration@169..194
