tests/snapshots/no_step_narration/numeric_dot_step.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/no_step_narration/numeric_dot_step.input.py
---
"""
A leading `# 1. text` comment matches the numeric-dot shape and earns
a diagnostic recommending the step move into a named function.
"""


def process(payload):
    # 1. normalize whitespace
    cleaned = payload.strip()
    return cleaned
