tests/snapshots/no_step_narration/pragma_skipped.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/no_step_narration/pragma_skipped.input.py
---
"""
A pragma comment routed through `ruff_python_trivia::is_pragma_comment`
is invisible to the rule, even when its body starts with a digit or
matches another tool's directive shape.
"""

# noqa: F401
# type: ignore
# pyright: ignore[reportMissingImports]


def process(payload):
    return payload
