tests/snapshots/no_step_narration/prose_ignore_suppression.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/no_step_narration/prose_ignore_suppression.input.py
---
no-step-narration@300..351
