tests/snapshots/no_step_narration/step_word_colon.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/no_step_narration/step_word_colon.input.py
---
no-step-narration@138..162
